fix margin collapsing problem of header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,9 @@
 html, body{
     height: 100%;
 }
+h1{
+    margin-top: 0px;
+}
 .row{
     margin-left: 0;
     margin-right: 0;
@@ -11,7 +14,7 @@ html, body{
 #header{
     height: 5%;
     min-height: 50px;
-
+    padding-top: 1px;
     background-color: #10222B;
     text-align: left;
 }
@@ -22,7 +25,6 @@ html, body{
 
     color: #F0EED0;
 }
-
 #sidebar {
     margin-top: 15px;
 }
